Correction structure HTML + aligned textarea + editor BG

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -41,39 +41,67 @@ h1 {
     position: relative;
     display: flex;
     flex-direction: row;
-    width: 1865px;
-    height: 35 * 18px;
+    height: 25 * 18px;
     margin: auto;
     border: solid 1px rgb(236, 236, 236);
     font-family: monospace;
     background: repeating-linear-gradient(
         to bottom,
-        #1b1b1b 0px,
-        #1b1b1b 18px,
+        #272727 0px,
         #272727 18px,
-        #272727 2 * 18px
+        #1b1b1b 18px,
+        #1b1b1b 2 * 18px
     );
     &_linenumber {
         font-family: 'Courier New', Courier, monospace;
         font-size: medium;
-        padding-left: 5px;
-        padding-right: 5px;
-        width: 50px;
         border-right: solid 1px rgb(236, 236, 236);
         overflow: hidden;
         text-align: right;
     }
 }
+.highlights > p {
+    width: 100%;
+    caret-color: rgba(236, 236, 236, 1.0);
+    padding-left: 5px;
+    background-color: #272727;
+}
+.highlights > p:nth-child(2n) {
+    background-color: #1b1b1b;
+}
+.editor > .editor_linenumber {
+    min-width: 60px;
+    width: 60px;
+}
+.editor > .editor_linenumber > p {
+    width: 60px;
+    background-color: #272727;
+}
+.editor > .editor_linenumber > p:nth-child(2n) {
+    background-color: #1b1b1b;
+}
 .container {
+    position: relative;
     width: 1865px;
     textarea {
-        width: calc(100% - 85px);
+        width: 100%;
         height: 100%;
+        right: 0;
+        transform: translateX(5px);
     }
     .backdrop {
-        width: calc(100% - 95px);
+        width: 100%;
         height: 100%;
+        right: 0;
     }
+}
+.backdrop {
+    position: absolute;
+    z-index: 1;
+    caret-color: rgb(236, 236, 236);
+    pointer-events: none;
+    background-color: transparent;
+    overflow: hidden;
 }
 #cloneInput {
     font-family: 'Courier New', Courier, monospace;
@@ -87,7 +115,6 @@ h1 {
     border-radius: 0;
     height: 100%;
     overflow: hidden;
-    margin-left: -10px;
 }
 #userInput {
     font-family: 'Courier New', Courier, monospace;
@@ -95,7 +122,7 @@ h1 {
     display: block;
     height: 100%;
     position: absolute;
-    z-index: 1;
+    z-index: 2;
     margin: 0;
     border-radius: 0;
     background-color: transparent;
@@ -106,25 +133,19 @@ h1 {
     word-wrap: break-word;
     color: transparent;
     overflow-y: scroll;
-    margin-left: 10px;
     right: 0;
-    border-color: transparent;
-}
-.backdrop {
-    position: absolute;
-    z-index: 2;
-    caret-color: rgb(236, 236, 236);
-    padding-left: 20px;
-    pointer-events: none;
-    background-color: transparent;
-    overflow: hidden;
-    right: 0;
+    //color: rgba(236, 236, 236, 0.5);
+    //border-color: transparent;
 }
 
 .highlights {
     white-space: pre-wrap;
     word-wrap: break-word;
     color: transparent;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    padding-top: 0px;
+    padding-bottom: 0px;
 }
 
 #userInput:focus {
